# django_site

./: ceee.py  django_lesson2_homework.py  requirements.txt  wwefwefw.py
Tourist_agency/: опции отеля(джанго шелл)
Tourist_agency/booking/: models.py  views.py
Tourist_agency/booking/migrations/: 0001_initial.py
Tourist_agency/booking/templates/: reservation.html  reservation_detail.html
Tourist_agency/tourist_agency/: db.sqlite3  manage.py
Tourist_agency/tourist_agency/booking/: models.py  urls.py  views.py
Tourist_agency/tourist_agency/hotels/: forms.py  models.py  urls.py  views.py
Tourist_agency/users/: models.py  views.py
my_site/: db.sqlite3  play.py  pyproject.toml
my_site/drf_app/: models.py  serializers.py  urls.py  views.py
my_site/drf_app/management/commands/: load_books.py
my_site/my_app/: forms.py  index.html  models.py  urls.py  utils.py  views.py
my_site/my_app/management/commands/: load_items.py
my_site/my_app/migrations/: 0001_initial.py  0002_alter_comment_id_alter_like_id_alter_post_id_and_more.py  0003_alter_comment_post_id_alter_comment_user_id_and_more.py  0004_book_publisher_store_book_publisher.py  0005_author.py  0006_book_authors.py  0007_alter_book_publisher.py
my_site/my_app/templates/: book_forms.html  books1.html  books2.html  books3.html  index.html  publisher_form.html  user_forms.html
my_site/my_site/: __init__.py  celery_tasks.py  settings.py  urls.py
test/: conftest.py  test_basics.py  test_homework.py  test_with_fixtures.py
user_managment/: manage.py
user_managment/user_managment/: settings.py  urls.py
user_managment/users/: managers.py  models.py  urls.py  views.py
(+17 files in other folders)
